(fix): Fixed requirement file (plz, don't commit until you make sure it works)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-customtkinter             5.2.2
-networkx                  3.5
-numpy                     2.2.6
-pip                       25.2
+customtkinter==5.2.2
+networkx==3.5
+numpy==2.2.6
+pip==25.2
